day3/dynamic-pv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dynamic-pv-pod
spec:
  volumes:
    - name: pv-storage
      persistentVolumeClaim:
        claimName: dynamic-pvc
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pv-storage
