day3/nfs-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-pod
spec:
  containers:
  - name: test
    image: nginx
    volumeMounts:
    - name: data-vol
      mountPath: /appdir 
  volumes:
  - name: data-vol
    nfs:
      server: 192.168.1.222
      path: /var/nfs-share
