day3/nginx-secure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-secure
  name: nginx-secure
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx-secure
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-secure
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: nginx-config
      - name: htpasswd-volume
        secret:
          secretName: nginx-htpasswd
      containers:
      - image: nginx
        name: nginx
        resources: {}
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx
        - name: htpasswd-volume
          mountPath: /etc/nginx/conf
